Replace hugo attention shortcodes

--- a/src/content/lessen/fysica/beweging/verplaatsing/index.mdx
+++ b/src/content/lessen/fysica/beweging/verplaatsing/index.mdx
@@ -9,7 +9,7 @@ images: ['content/lessen/fysica/beweging/verplaatsing/img/inleiding.png', 'conte
 ---
 Maria en Dirk willen dit weekend van Brussel naar Gent (57 km) rijden en vervolgens overnachten in Aalst, wat eigenlijk 29 km in de tegengestelde richting is. 
 
-{{< svg "img/inleiding.svg" "Een visualisatie van de situatie." >}}
+![Een visualisatie van de situatie.](img/inleiding.png)
 
 Maria zegt: \"We nemen best de trein, want anders moeten we 86 kilometer met de auto **afleggen** en dat is niet goed voor het milieu.\" Dirk is niet akkoord en zegt: \"Onze **verplaatsing** bedraagt slechts 28 km, dus we kunnen best de auto nemen.\" Wie van beide is juist? 🤔
 
@@ -18,7 +18,7 @@ Vooraleer we kunnen bepalen wie gelijk heeft, moeten we ons eerst afvragen **waa
 
 De **baan** is de verzameling van alle punten die een bewegend voorwerp achtereenvolgens aanneemt.
 
-{{< svg "img/baan.svg" "De baan van een vliegende vlieg." >}}
+![De baan van een vliegende vlieg.](img/baan.png)
 
 ## De afgelegde weg is niet hetzelfde als de verplaatsing
 De **afgelegde weg** is de afstand die **werkelijk wordt doorlopen**. **Maria** spreekt ook van **afgelegde weg**. Tussen Brussel en Gent ligt 57 km en tussen Gent en Aalst ligt 29 km. De werkelijk doorlopen afstand is dus de **optelsom van beide**, oftewel 86 kilometer.
@@ -31,12 +31,14 @@ Als je 's morgens vertrekt in Brussel en 's avonds weer aankomt in Brussel, dan 
 
 
 ## Samengevat
-{{< attention "De baan van een beweging" >}}
-De **baan** is de **verzameling van punten** die een bewegend voorwerp achtereenvolgens inneemt. Op de baan kun je de positie van een voorwerp op elk tijdstip weergeven.
-{{< /attention >}}
+<Attention title="De baan van een beweging">
 
-{{< attention "De afgelegde weg en verplaatsing" >}}
+De **baan** is de **verzameling van punten** die een bewegend voorwerp achtereenvolgens inneemt. Op de baan kun je de positie van een voorwerp op elk tijdstip weergeven.
+</Attention>
+
+<Attention title="De afgelegde weg en verplaatsing">
+
 De **afgelegde weg** is de afstand die **werkelijk wordt doorlopen**.
 
 De **verplaatsing** is het **verschil in positie** van het voorwerp op **twee tijdstippen**.
-{{< /attention >}}
+</Attention>
