--- a/src/content/lessen/wiskunde/meetkunde_1/cirkels/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/cirkels/index.mdx
@@ -14,14 +14,14 @@ Een **cirkel** is de **verzameling van alle punten** die **op eenzelfde afstand*
 
 Een **passer** is hiervoor het beste bewijs. De **afstand** tussen het potlood en het metalen pinnetje **blijft altijd hetzelfde**. Wanneer je het ene been (met het potlood) draait, markeer je dus alle punten op een bepaalde afstand van het middelpunt, de plek waar het metalen pinnetje staat. 🧠
 
-{{< svg "img/cirkel.svg" "Een illustratie van een cirkel." >}}
+![Een illustratie van een cirkel.](img/cirkel.png)
 
 De **afstand** tussen elk punt van de **cirkel** en het **middelpunt**, noemen we de **straal** (vaak weergegeven met $r$). In dit voorbeeld is $r$ de straal en geldt er: $|AM| = |BM| = r$. Moest dit niet gelden, dan zou het geen cirkel zijn.
 
 ## De diameter is twee keer de straal
 Als je **twee keer** de straal neemt, dan krijg je de **diameter**. Dit is dus eigenlijk **een lijnstuk door het middelpunt** van een punt op de cirkel naar een ander punt op de cirkel. 
 
-{{< svg "img/straal_diameter.svg" "De diameter is tweemaal de straal." >}}
+![De diameter is tweemaal de straal.](img/straal_diameter.png)
 
 Zowel het begrip straal als diameter heeft een **dubbele betekenis**. Enerzijds is het **een lijnstuk** en anderzijds is het **een lengte**. $[MB]$ is de straal, maar $|MB|$ noemen we evengoed de straal.
 
@@ -30,15 +30,17 @@ Een **koorde** is een **lijnstuk** dat **twee punten van de cirkel** verbindt. W
 
 Daarnaast is er ook nog een **middellijn**. Dit is een **rechte** {{< mute "of lijn" >}} die **door het middelpunt** van de cirkel gaat. Een hoek waarvan het **hoekpunt** samenvalt met het **middelpunt**, noemt men een **middelpuntshoek**.
 
-{{< svg "img/koorde_middellijn.svg" "Een illustratie van koorde, middellijn en middelpuntshoek." >}}
+![Een illustratie van koorde, middellijn en middelpuntshoek.](img/koorde_middellijn.png)
 
 ## Samengevat
-{{< attention "De cirkel" >}}
-Een **cirkel** is de **verzameling van alle punten** die **op eenzelfde afstand** liggen van een gegeven punt, het **middelpunt**. Deze gelijke afstand noemen we de **straal**.
-{{< /attention >}}
+<Attention title="De cirkel">
 
-{{< attention "Lijnen in de cirkel" >}}
+Een **cirkel** is de **verzameling van alle punten** die **op eenzelfde afstand** liggen van een gegeven punt, het **middelpunt**. Deze gelijke afstand noemen we de **straal**.
+</Attention>
+
+<Attention title="Lijnen in de cirkel">
+
 Een **koorde** is een **lijnstuk** dat **twee punten van de cirkel** verbindt. De **diameter** is dan weer een koorde die door het middelpunt gaat.
 
 Daarnaast is er ook nog een **middellijn**: een **rechte** door het **middelpunt** van de cirkel. Een hoek waarvan het **hoekpunt** samenvalt met het **middelpunt**, noemt men een **middelpuntshoek**.
-{{< /attention >}}
+</Attention>
