--- a/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
@@ -14,7 +14,7 @@ Overal rondom ons zien we **ruimtefiguren** en dat is waar we het deze les over 
 ## Het verschil tussen 2D en 3D
 De **vlakke meetkunde** speelt zich af in **twee dimensies**, terwijl de **ruimtemeetkunde** zich afspeelt in **drie dimensies**. Zo'n dimensie moet je zien als een richting waarin je kunt meten. Bij twee dimensies wordt dit **lengte en breedte** en bij drie dimensies komt er ook nog **hoogte** bij. Om **een punt in een vlak** te beschrijven heb je slechts **2 coördinaten** nodig, eentje voor elke richting. En je kunt het al raden 💭: **in een ruimte** (drie dimensies) heb je **3 coördinaten** nodig. 🤯
 
-{{< svg "img/2d_3d.svg" "Een vlak heeft een lengte en een breedte, terwijl een ruimte ook nog een hoogte heeft." >}}
+![Een vlak heeft een lengte en een breedte, terwijl een ruimte ook nog een hoogte heeft.](img/2d_3d.png)
 
 En dingen met **één dimensie** dan? 🤔 Wel, die kun je voorstellen op **een enkele rechte** (zoals de getallenas). Je kan dus alleen punten gebruiken als je iets in deze dimensie wilt plaatsen. 
 
@@ -23,47 +23,48 @@ Wil je **in een vlak** {{< mute "dat twee dimensies heeft" >}} iets plaatsen, da
 ## Enkele vlakke figuren
 Voor de volledigheid vermelden we hier nog even **de vlakke figuren** waarvan je verondersteld wordt ze te kennen. 
 
-{{< svg "img/vlakke_figuren.svg" "Een overzicht van de vlakke figuren: vierkant, rechthoek, driehoek, trapezium, parallellogram, veelhoek en cirkel." >}}
+![Een overzicht van de vlakke figuren: vierkant, rechthoek, driehoek, trapezium, parallellogram, veelhoek en cirkel.](img/vlakke_figuren.png)
 
 > In de lessen over [driehoeken](../driehoeken), [vierhoeken](../vierhoeken) en [cirkels](../cirkels) kan je meer leren over deze vlakke figuren. 🙌
 
 ## Ruimtefiguren weergeven in 2D
 We zijn allemaal wel al eens ruimtefiguren tegengekomen die zijn afgebeeld op een blad papier. Hiervoor gebruikt men **perspectieven**, zodat we **een gevoel van drie dimensies** krijgen op een tweedimensionaal vlak. 
 
-{{< svg "img/cavaliere.svg" "Een kubus in cavalièreperspectief." >}}
+![Een kubus in cavalièreperspectief.](img/cavaliere.png)
 
 Elke (stippel)lijn noemt men een **ribbe** {{< mute "van de kubus" >}}.
 
-{{< attention "Cavalièreperspectief" >}}
+<Attention title="Cavalièreperspectief">
+
 Het **cavalièreperspectief** wordt het meest gebruikt voor het afbeelden van ruimtefiguren. Om dit correct te gebruiken, **teken je eerst het vlak waarop je kijkt in ware grootte**. Vervolgens teken je de **zijvlakken onder een hoek van 45°** met de horizontale lijnen. Het zijn ook alleen deze schuine lijnen (die je onder een hoek tekent) die niet de werkelijke grootte hebben. Je tekent ze **de helft van de werkelijke lengte**. Ten slotte worden de **onzichtbare ribben (randen) met een stippellijn** aangeduid.
-{{< /attention >}}
+</Attention>
 
 ## Ruimtefiguren bestaan uit vlakke figuren
 We kunnen de ruimtefiguren ook **opensnijden** zodat we een soort bouwplaat krijgen. We spreken dan van de **ontwikkeling of opbouw van een ruimtefiguur**. Op zo'n ontwikkeling zijn de **maten en hoeken** perfect af te lezen, in tegenstelling tot perspectieven. We merken ook dat de **ruimtefiguren opgebouwd zijn uit vlakke figuren**. 🤯
 
 Een **kubus** bestaat uit **zes vierkanten**. Hieronder staat één ontwikkeling van een kubus, maar er zijn er meer! Kan jij er nog eentje vinden? 🧐 **TIP**: Als je je ontwikkelingen uitknipt ✂️, kan je ze onmiddellijk uittesten door ze op te vouwen. 💪
 
-{{< svg "img/opbouw_kubus.svg" "Een kubus bestaat uit 6 vierkanten. Een ontwikkeling kan zijn: vier vierkanten naast elkaar en dan boven en onder de tweede nog een vierkant." >}}
+![Een kubus bestaat uit 6 vierkanten. Een ontwikkeling kan zijn: vier vierkanten naast elkaar en dan boven en onder de tweede nog een vierkant.](img/opbouw_kubus.png)
 
 Een **balk** bestaat uit **zes rechthoeken**, die bestaan uit **drie paar gelijke rechthoeken**. Ook hier zijn andere ontwikkelingen mogelijk dan hieronder getoond. 🕵️‍♀️
 
-{{< svg "img/opbouw_balk.svg" "Een balk bestaat uit 6 rechthoeken. Een ontwikkeling kan zijn: vier rechthoeken naast elkaar en dan boven en onder de tweede nog een rechthoek." >}}
+![Een balk bestaat uit 6 rechthoeken. Een ontwikkeling kan zijn: vier rechthoeken naast elkaar en dan boven en onder de tweede nog een rechthoek.](img/opbouw_balk.png)
 
 Een **cilinder** bestaat uit **twee cirkels** en **een rechthoek**. De rechthoek vormt de **mantel** van de cilinder. 🧥
 
-{{< svg "img/opbouw_cilinder.svg" "Een cilinder bestaat uit 1 rechthoek en twee cirkels. De ontwikkeling ziet er als volgt uit: een rechthoek met erboven en eronder één cirkel die vasthangt aan de rechthoek." >}}
+![Een cilinder bestaat uit 1 rechthoek en twee cirkels. De ontwikkeling ziet er als volgt uit: een rechthoek met erboven en eronder één cirkel die vasthangt aan de rechthoek.](img/opbouw_cilinder.png)
 
 Een **piramide** bestaat uit **een veelhoek** als grondvlak en **driehoekige zijvlakken** vanaf elke van de zijde van de veelhoek naar **een gemeenschappelijke top**. Hieronder is de ontwikkeling van een piramide met een **vierkant als grondvlak** getekend.
 
-{{< svg "img/opbouw_piramide.svg" "Een piramide bestaat uit een grondvlak (veelhoek) en driehoeken, zoveel als er zijden zijn aan het grondvlak. De ontwikkeling ziet er als volgt uit: het grondvlak in het midden met aan alle zijde een even grote driehoek." >}}
+![Een piramide bestaat uit een grondvlak (veelhoek) en driehoeken, zoveel als er zijden zijn aan het grondvlak. De ontwikkeling ziet er als volgt uit: het grondvlak in het midden met aan alle zijde een even grote driehoek.](img/opbouw_piramide.png)
 
 Een **kegel** bestaat uit **een cirkel** als grondvlak en **een gekromd vlak**. 🍦 Dit gekromd vlak bekomt men door alle punten van de cirkel te verbinden met een **gemeenschappelijke top**.
 
-{{< svg "img/opbouw_kegel.svg" "Een kegel bestaat uit een cirkel en een mantel. Dit moet je alleen herkennen!" >}}
+![Een kegel bestaat uit een cirkel en een mantel. Dit moet je alleen herkennen!](img/opbouw_kegel.png)
 
 Tot slot bestaat er ook nog een **prisma**. Dit is **elke figuur met hetzelfde grond- en bovenvlak**, die **geen gekromde oppervlakken** heeft. De cilinder is dus **geen** prisma! ⚠️ Met andere woorden is elke ruimtefiguur waarbij **twee veelhoeken**, eentje boven en eentje onder, **verbonden** zijn **met rechthoeken**, een prisma.
 
-{{< svg "img/prisma.svg" "Twee voorbeelden van een prisma." >}}
+![Twee voorbeelden van een prisma.](img/prisma.png)
 
 ## Evenwijdige en snijdende vlakken
 Net zoals rechten, kunnen **vlakken evenwijdig zijn aan elkaar of elkaar snijden**.
@@ -72,29 +73,34 @@ Net zoals rechten, kunnen **vlakken evenwijdig zijn aan elkaar of elkaar snijden
 
 De definitie is namelijk voor beide **juist hetzelfde**. Alleen gaat het hier niet over rechten, maar over vlakken!
 
-{{< svg "img/ligging_vlakken.svg" "Visualisatie van evenwijdige en snijdende vlakken." >}}
+![Visualisatie van evenwijdige en snijdende vlakken.](img/ligging_vlakken.png)
 
 Als je de twee snijdende vlakken beter bekijkt 🤓, dan kunnen je twee dingen opvallen. Ten eerste vormen **alle snijpunten** samen, {{< mute "dat zijn de punten die in/op beide vlakken liggen," >}} **een rechte**. Ten tweede snijden de twee rechtse vlakken elkaar in dit voorbeeld loodrecht $\alpha \perp \beta$. Had je dit gezien? 👀
 
 Ten slotte hebben we het nog even over **kruisende rechten**. Bij deze rechten is het **onmogelijk om ze in één vlak te plaatsen**. Daarmee verschillen ze van evenwijdige en snijdende rechten, waarbij dit wel mogelijk is! 😀
 
 ## Samengevat
-{{< attention "Verschillende dimensies" >}}
+<Attention title="Verschillende dimensies">
+
 We kunnen dingen in verschillende dimensies tekenen/plaatsen. Een **dimensie** moet je zien als een richting waarin je kunt meten. De **vlakke meetkunde** speelt zich af in **twee dimensies** (lengte en breedte) en de **ruimtemeetkunde** in **drie dimensies** (lengte, breedte en hoogte).
-{{< /attention >}}
+</Attention>
 
-{{< attention "Vlakke figuren" >}}
+<Attention title="Vlakke figuren">
+
 Er bestaan verschillende soorten **vlakke figuren**, die je perfect op een blaadje papier kan tekenen. De voornaamste zijn: een **driehoek**, **rechthoek**, **vierkant**, **trapezium**, **parallellogram**, **cirkel** en een **veelhoek**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Ruimtefiguren" >}}
+<Attention title="Ruimtefiguren">
+
 **Ruimtefiguren** kan je niet zomaar op een blaadje papier weergeven. Ze bevinden zich in de ruimte. De voornaamste zijn: een **kubus**, **balk**, **cilinder**, **piramide**, **kegel** en **prisma**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Cavalièreperspectief" >}}
+<Attention title="Cavalièreperspectief">
+
 Het **cavalièreperspectief** wordt het meest gebruikt voor het afbeelden van ruimtefiguren. Om dit correct te gebruiken, **teken je eerst het vlak waarop je kijkt in ware grootte**. Vervolgens teken je de **zijvlakken onder een hoek van 45°** met de horizontale lijnen. Het zijn ook alleen deze schuine lijnen (die je onder een hoek tekent) die niet de werkelijke grootte hebben. Je tekent ze **de helft van de werkelijke lengte**. Tenslotte worden de **onzichtbare ribben (randen) met een stippelijn** aangeduid.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Evenwijdige en snijdende vlakken" >}}
+<Attention title="Evenwijdige en snijdende vlakken">
+
 De definitie voor **evenwijdige en snijdende vlakken** komt precies overeen met die van evenwijdige en snijdende rechten. Alleen gaat het niet over rechten, maar over vlakken.
-{{< /attention >}}
+</Attention>
