--- a/src/content/lessen/wiskunde/meetkunde_1/omtrek/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/omtrek/index.mdx
@@ -25,7 +25,8 @@ Voor een **rechthoek** en **parallellogram** moet je nog een extra zijde meten. 
 De **cirkel** is nog een geval apart. Hiervoor moet je de **straal** ($r$) meten en dit invullen in de formule $2 \cdot \pi \cdot r$. Hierbij is $\pi$ (pi) een {{< mute "irrationaal" >}} constant getal waarvoor je de waarde $3,14$ mag gebruiken.
 
 ## Samengevat
-{{< attention "De omtrek van een figuur berekenen" >}}
+<Attention title="De omtrek van een figuur berekenen">
+
 Om de **omtrek** te berekenen, neem je de **som van alle buitenzijden**. Bij enkele figuren kan dit eenvoudiger ($z$ staat voor zijde):
 * Ruit en vierkant: $z \cdot 4$;
 * Parallellogram en rechthoek: $z_{1} \cdot 2 + z_{2} \cdot 2$ met $z_{1}$ de lange zijde en $z_{2}$ de korte zijde;
