--- a/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
@@ -35,7 +35,7 @@ Om de **oppervlakte van figuren** te berekenen, zijn er enkele **formules** die 
 
 Merk op dat je bij de **figuren** waar er in de **noemer** een $2$ staat, dit eigenlijk wil zeggen dat het de **helft** is **van een rechthoek**. In de teller staat dan de formule voor de oppervlakte van een rechthoek (soms licht gewijzigd). 💡
 
-{{< svg "img/oppervlaktes.svg" "Een overzicht van de oppervlakteformules met visuele verduidelijking." >}}
+![Een overzicht van de oppervlakteformules met visuele verduidelijking.](img/oppervlaktes.png)
 
 Als je de **oppervlakte van samengestelde figuren** wilt bepalen, dan verdeel je deze figuur best in verschillende figuren waarvoor een formule bestaat. Zo kan je een gevel van een huis splitsen in een vierkant (of rechthoek) en een driehoek. 🏠 🌲
 
@@ -45,11 +45,13 @@ In de [les over ruimtefiguren](../figuren) hebben we geleerd dat ruimtefiguren b
 Ook hier kan je het voor sommige ruimtefiguren **eenvoudiger** maken. Zo bestaat een **kubus** uit **zes identieke vierkanten**, dus je **vermenigvuldigt** de **oppervlakte van één vierkant met zes**. Kan jij nog zo'n formules vinden? 🧐
 
 ## Samengevat
-{{< attention "Een oppervlakte" >}}
-De **oppervlakte** (vaak aangeduid met A) van een vlakke figuur is een **maat voor de grootte** ervan. We gebruiken **oppervlaktematen** om dit weer te geven, zoals cm², m² of ha.
-{{< /attention >}}
+<Attention title="Een oppervlakte">
 
-{{< attention "Oppervlakteformules" >}}
+De **oppervlakte** (vaak aangeduid met A) van een vlakke figuur is een **maat voor de grootte** ervan. We gebruiken **oppervlaktematen** om dit weer te geven, zoals cm², m² of ha.
+</Attention>
+
+<Attention title="Oppervlakteformules">
+
 De **oppervlakteformules** leer je best vanbuiten, of je zorgt ervoor dat je weet **vanwaar ze komen**.
 
 | Figuur         | Formule                                     |
@@ -63,4 +65,4 @@ De **oppervlakteformules** leer je best vanbuiten, of je zorgt ervoor dat je wee
 | Cirkel         | $A_{cirkel} = r \cdot r \cdot \pi$          |
 
 Voor **ruimtefiguren** neem je **de som van oppervlaktes van de vlakke figuren** waaruit de ruimtefiguur is opgebouwd.
-{{< /attention >}}
+</Attention>
