--- a/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
@@ -12,24 +12,24 @@ Overal rondom ons zien we **lijnen of rechten**. Sommige snijden elkaar niet en 
 ## Wat is een rechte?
 In de [vorige les](../basisbegrippen) hebben we reeds gezien wat een rechte is, maar om volledig te zijn herhalen we dit nog even.
 
-{{< svg "img/rechte.svg" "De rechte a is een lijn die oneindig doorloopt" >}}
+![De rechte a is een lijn die oneindig doorloopt](img/rechte.png)
 
 Een **rechte of lijn** is een rechte lijn die **oneindig doorloopt**. Het is dus een **oneindige verzameling punten in één richting**. Maar aangezien het onmogelijk is om een rechte oneindig door te trekken, spreken we af dat elke **onbegrensde** {{< mute "(door een punt)" >}} **lijn** een rechte is. Zoals doet vermoeden is een rechte ook steeds een **rechte lijn** en heeft hij geen gebogen stukken.
 
 We kunnen een rechte op twee manieren **benoemen**. Enerzijds **door een kleine letter**, zoals a. Of anderzijds **door twee punten op die rechte**.
 
-{{< svg "img/notatie_rechte.svg" "We kunnen een rechte op twee manieren benoemen. Oftewel met een kleine letter oftewel met twee punten op de rechte." >}}
+![We kunnen een rechte op twee manieren benoemen. Oftewel met een kleine letter oftewel met twee punten op de rechte.](img/notatie_rechte.png)
 
 ## Wat is het verschil evenwijdige en snijdende rechten?
 Het verschil tussen een evenwijdige en snijdende rechte is fundamenteel. Het is een verschil zoals dag ☀️ en nacht 🌔.
 
 **Evenwijdige rechten** zijn rechten die overal even ver {{< mute "(letterlijk even wijd)" >}} van elkaar liggen. Als de {{< mute "(loodrechte)" >}} afstand tussen twee rechten bijvoorbeeld overal $1~\si{cm}$ is, dan zijn die rechten evenwijdig. Ze hebben dan **geen enkel punt gemeenschappelijk**. Het kan echter ook dat de afstand tussen twee rechten overal $0~\si{cm}$ is, en dan zijn de rechten òòk evenwijdig. In dat geval vallen de rechten samen en hebben ze dus **al hun punten gemeenschappelijk**. Wanneer rechte $a$ evenwijdig is aan rechte $b$, schrijven we dat als **$a$ // $b$** of **$a \parallel b$**.
 
-{{< svg "img/evenwijdige_rechten.svg" "Twee evenwijdige rechten vallen oftewel samen of raken elkaar nooit." >}}
+![Twee evenwijdige rechten vallen oftewel samen of raken elkaar nooit.](img/evenwijdige_rechten.png)
 
 **Snijdenden rechten** zijn rechten die **juist één punt gemeenschappelijk** hebben. Dit gemeenschappelijke punt noemen we **het snijpunt**.
 
-{{< svg "img/snijdende_rechten.svg" "Twee snijdende rechten hebben één punt gemeenschappelijk. Dit punt noemen we het snijpunt." >}}
+![Twee snijdende rechten hebben één punt gemeenschappelijk. Dit punt noemen we het snijpunt.](img/snijdende_rechten.png)
 
 Daarnaast bestaat er ook nog iets zoals **kruisende rechten**. Dit zijn rechten die elkaar **noch snijden**, **noch evenwijdig** zijn. We komen deze alleen tegen in een **driedimensionale ruimte**, dus niet in het vlak (zoals een blaadje papier). Het zijn **rechten die niet in hetzelfde vlak liggen**. We gaan hier verder op in bij de les rond [ruimtefiguren](../figuren).
 
@@ -37,20 +37,21 @@ Daarnaast bestaat er ook nog iets zoals **kruisende rechten**. Dit zijn rechten 
 Als je de [vorige les](../basisbegrippen) goed hebt gelezen, dan weet je dat een drager de rechte is waarop een bepaald lijnstuk, halfrechte, punt... ligt.
 Wanneer twee dragers {{< mute "of rechten" >}} **loodrecht** op elkaar liggen, betekent dit dat ze een **rechte hoek** {{< mute "(90°)" >}} vormen. We noteren **$a \perp b$**. 
 
-{{< svg "img/loodrechte_stand.svg" "Twee rechten die loodrecht op elkaar staan duiden we aan met een speciaal teken. Dit is een kleine rechte hoek in de hoek die 90° is." >}}
+![Twee rechten die loodrecht op elkaar staan duiden we aan met een speciaal teken. Dit is een kleine rechte hoek in de hoek die 90° is.](img/loodrechte_stand.png)
 
 Bert is bouwvakker. 👷 Hij is al enkele dagen bezig met het metsen van een muur en wil nu controleren of hij wel goed bezig is. Staat de muur mooi recht? Zijn materiaal ligt echter beneden en Bert is een beetje lui. 🦥 Hij heeft alleen touw en een klein stukje lood bij zich (zijn geluksbrenger).
 
 Gelukkig heeft Bert altijd opgelet bij **wiskunde en fysica** en weet hij perfect hoe hij hiermee kan controleren of hij goed bezig is. 💡 Weet jij ook hoe je hiermee kan controleren of de muur recht staat?
 
-{{< svg "img/bouwvakker_bert.svg" "Een schietlood werd vroeger gebruikt om te kijken of iets recht stond. Het lood wordt namelijk door de zwaartekracht aangetrokken en maakt hierdoor een rechte hoek met het oppervlak. Als het schietlood dan evenwijdig is met de muur, dan staat de muur mooi recht." >}}
+![Een schietlood werd vroeger gebruikt om te kijken of iets recht stond. Het lood wordt namelijk door de zwaartekracht aangetrokken en maakt hierdoor een rechte hoek met het oppervlak. Als het schietlood dan evenwijdig is met de muur, dan staat de muur mooi recht.](img/bouwvakker_bert.png)
 
 Vermoedelijk komt de benaming *loodrecht* van dit gebruik.
 
 Daarnaast bestaat er **bij een lijnstuk** nog een speciale soort **loodlijn** (dat is een lijn die loodrecht staat op een andere), namelijk de **middelloodlijn.** 
-{{< attention "Middelloodlijn" >}}
+<Attention title="Middelloodlijn">
+
 De **middelloodlijn van een lijnstuk** is de rechte die door het midden van dit lijnstuk gaat en loodrecht staat op dit lijnstuk.
-{{< /attention >}}
+</Attention>
 
 ## Overige eigenschappen
 Voor de volgende eigenschappen neem je er best een **blaadje papier** 📃 en een **scherp potlood** ✏️ bij! Zo kan je zelf controleren of wat ik zeg correct is en studeer je ondertussen de **eigenschappen** al wat in!
@@ -75,22 +76,25 @@ De eerste eigenschap die hierboven is opgelijst, is het **vijfde postulaat** van
 ## Hoe bereken ik de afstand tussen een punt en een rechte?
 Als we de **afstand** willen meten 📏 tussen twee objecten, gebruiken we steeds **rechte lijnen**. Dit is de *kortste weg* en wordt dus gebruikt voor afstanden. Maar welke rechte lijn moeten we dan gebruiken om de afstand tussen een punt en een rechte te bepalen? :thinking face: We kunnen zoveel rechte lijnen trekken. Daarom spreken we af om de **loodlijn van de rechte a door het punt B** te gebruiken, dit is immers weer de *kortste weg*. 💡
 
-{{< svg "img/afstand_punt_rechte.svg" "We bepalen de afstand tussen een rechte a en een punt B als de lengte van de loodlijn van de rechte a door het punt B" >}}
+![We bepalen de afstand tussen een rechte a en een punt B als de lengte van de loodlijn van de rechte a door het punt B](img/afstand_punt_rechte.png)
 
 ## Samengevat
-{{< attention "Wat is een rechte?" >}}
-Een **rechte of lijn** is een rechte lijn die **oneindig doorloopt**. We benoemen een rechte door een **kleine letter**, zoals a of **door twee punten op die rechte**.
-{{< /attention >}}
+<Attention title="Wat is een rechte?">
 
-{{< attention "Snijdende, kruisende en evenwijdige rechten" >}}
+Een **rechte of lijn** is een rechte lijn die **oneindig doorloopt**. We benoemen een rechte door een **kleine letter**, zoals a of **door twee punten op die rechte**.
+</Attention>
+
+<Attention title="Snijdende, kruisende en evenwijdige rechten">
+
 **Snijdenden rechten** zijn rechten die **juist één punt gemeenschappelijk** hebben. Dit gemeenschappelijke punt noemen we **het snijpunt**.
 
 **Evenwijdige rechten** zijn rechten die **geen enkel gemeenschappelijk punt** hebben of rechten die **samenvallen**.
 
 Zowel snijdende als evenwijdige rechten liggen **in hetzelfde vlak**. Dit in tegenstelling tot **kruisende rechten**, die **niet in hetzelfde vlak** liggen.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Overige eigenschappen" >}}
+<Attention title="Overige eigenschappen">
+
 Er zijn nog enkele belangrijke eigenschappen (probeer ze uit door ze te tekenen!):
 1. Door elk punt van het vlak kan je precies één rechte tekenen die evenwijdig is met een gegeven rechte.
 2. Door elk punt van het vlak kan je precies één rechte tekenen die  loodrecht staat op een gegeven rechte.
@@ -98,8 +102,9 @@ Er zijn nog enkele belangrijke eigenschappen (probeer ze uit door ze te tekenen!
 4. Als een rechte een van twee evenwijdigen snijdt, dan snijdt ze ook de andere.
 5. Als twee rechten loodrecht op eenzelfde derde rechte staan, dan zijn de rechten onderling evenwijdig.
 6. Als een rechte loodrecht staat op een van twee evenwijdige rechten, dan staat ze ook loodrecht op de andere.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Afstand tussen een punt en een rechte" >}}
+<Attention title="Afstand tussen een punt en een rechte">
+
 We bepalen de afstand tussen **een rechte a** en een **punt B** als **de lengte van de loodlijn** van de **rechte a** door het **punt B**.
-{{< /attention >}}
+</Attention>
