--- a/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
@@ -19,7 +19,7 @@ hoe we producten zoals $5 \cdot 5 \cdot 5$ korter kunnen schrijven.
 ## Wat is een grondtal en een exponent?
 De uitdrukking uit de inleiding kunnen we herschrijven als: 
 
-{{< svg "img/terminologie.svg" "Een macht bestaat uit een grondtal en een exponent. In dit voorbeeld is 5 het grondtal en 3 de exponent." >}}
+![Een macht bestaat uit een grondtal en een exponent. In dit voorbeeld is 5 het grondtal en 3 de exponent.](img/terminologie.png)
 
 Om een macht correct op te schrijven, schrijf je
 eerst het **grondtal** $a$. Vervolgens schrijf je de **exponent** $n$ iets kleiner
@@ -47,13 +47,14 @@ $125$ geeft.
 
 $$ \underbrace{a \cdot a \cdot ... \cdot a}_{n \text{ factoren}} = a^n $$
 
-{{< attention "Speciale machten" >}}
+<Attention title="Speciale machten">
+
 Er zijn enkele 'speciale machten' die je best onthoudt:
 
 1. Als de **exponent $0$** is, dan is de uitkomst altijd **$1$**.
 2. Als de **exponent $1$** is, dan is de uitkomst altijd **het grondtal** zelf. Immers,
    een product met $1$ factor is die factor zelf.
-{{< /attention >}}
+</Attention>
 
 ## Machten met negatieve grondtallen
 $$ 2\orange{^4}= \underbrace{2 \cdot 2 \cdot 2 \cdot 2}_{\orange{4}\ factoren} = 16$$
@@ -91,16 +92,18 @@ Eerst bereken je het **resultaat zonder komma** en vervolgens bepaal je de **pla
 $$0.12^2 \rightarrow 12^2 = 144 \rightarrow 0.0144$$
 
 ## Samengevat
-{{< attention "Een macht berekenen" >}}
+<Attention title="Een macht berekenen">
+
 Algemeen geldt dat een macht met grondtal $a$ en exponent $n$ gelijk is aan:
 
 $$ \underbrace{a \cdot a \cdot ... \cdot a}_{n \text{ factoren}} = a^n $$
 
 Om te bepalen of een uitkomst positief of negatief is, tel je het *aantal mintekens*. Is het aantal **even**, dan is de uitkomst **positief**.
 Is het aantal **oneven**, dan is de uitkomst **negatief**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Macht van een breuk of kommagetal" >}}
+<Attention title="Macht van een breuk of kommagetal">
+
 Om de **macht van een breuk** te berekenen, verhef je **teller en noemer tot de macht**.
 
 In symbolen:
@@ -109,10 +112,11 @@ $$\left( \frac{a}{b} \right) ^n = \frac{a^n}{b^n}$$
 Om een **macht van een kommagetal** te berekenen, ga je als volgt te werk:
 1. Je berekent het **resultaat zonder komma** (je denkt de komma weg)
 2. Je bepaalt het aantal cijfers na de komma door de **exponent** te **vermenigvuldigen** met het **oorspronkelijk aantal cijfers na de komma**
-{{< /attention >}}
+</Attention>
 
-{{< attention "Speciale machten" >}}
+<Attention title="Speciale machten">
+
 $$ a^0 = 1$$
 $$ a^1 = a$$
 
-{{< /attention >}}
+</Attention>
