--- a/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
@@ -27,24 +27,24 @@ telkens ook wat dieper in op wat we moeten doen wanneer we in die bewerkingen
 Wanneer we getallen bij elkaar optellen, noemen we die getallen de **termen**
 van de optelling. De uitkomst van de optelling noemen we de **som**.
 
-{{< svg "img/optelling.svg" "Een optelling bestaat uit termen die als resultaat een som geven. We gebruiken het plusteken." >}}
+![Een optelling bestaat uit termen die als resultaat een som geven. We gebruiken het plusteken.](img/optelling.png)
 
 ### Een optelling voorstellen op een getallenas
 
 Een optelling kunnen we visueel voorstellen op een **getallenas**. We beginnen op de $0$ van de getallenas en telkens we een optelling tegenkomen, zetten we een aantal stappen. Wanneer je bv. vanaf de $0$ **drie stappen naar rechts** gaat en je daarna nog eens
 **twee stappen naar rechts** gaat, kom je uit op de $5$ van de getallenas. We kunnen dit schrijven als de som $3 + 2 = 5$.
 
-{{< svg "img/optelling_getallenas.svg" "De optelling met twee positieve getallen, weergegeven op een getallenas" >}}
+![De optelling met twee positieve getallen, weergegeven op een getallenas](img/optelling_getallenas.png)
 
 ### Optellingen met negatieve getallen
 
 In de verzameling van de gehele getallen zitten er ook **negatieve getallen**. Hoe kunnen we die optellen? Een negatief getal optellen, betekent op onze getallenas dat we dat aantal stappen **naar links** zetten, in plaats van naar rechts. Zo krijg je $4$ wanneer je $6$ en $-2$ optelt. Je gaat eerst **zes stappen naar rechts** en dan **twee stappen naar links**, door het minteken voor de $2$.
 
-{{< svg "img/optelling_negatief_getal.svg" "De optelling met een negatief getal, weergegeven op een getallenas." >}}
+![De optelling met een negatief getal, weergegeven op een getallenas.](img/optelling_negatief_getal.png)
 
 Je kunt natuurlijk ook twee negatieve getallen bij elkaar optellen. Zo krijg je $-5$ wanneer je $-2$ en $-3$ optelt: je zet eerst **twee stappen naar links** en vervolgens nog eens **drie stappen naar links**.
 
-{{< svg "img/optelling_negatieve_getallen.svg" "De optelling met twee negatieve getallen, weergegeven op een getallenas." >}}
+![De optelling met twee negatieve getallen, weergegeven op een getallenas.](img/optelling_negatieve_getallen.png)
 
 ### De optelling in $\mathbb{Z}$ is commutatief
 
@@ -114,7 +114,7 @@ We zien dat een optelling bij nul of een optelling met nul geen effect heeft. Da
 
 De onderdelen van een aftrekking noemen we, net als bij een optelling, de **termen**. Tussen die termen noteren we een **minteken** en de uitkomst van de aftrekking is het **verschil**.
 
-{{< svg "img/aftrekking.svg" "Een aftrekking bestaat uit termen die als resultaat een verschil geven. We gebruiken het minteken." >}}
+![Een aftrekking bestaat uit termen die als resultaat een verschil geven. We gebruiken het minteken.](img/aftrekking.png)
 
 Wanneer de aftrekking bestaat uit twee termen, noemen we de eerste term ook wel het **aftrektal** en de tweede term de **aftrekker**. In de aftrekking hierboven is $10$ dus het aftrektal en is $2$ de aftrekker.
 
@@ -236,7 +236,7 @@ Het omzetten van een aftrekking naar een optelling, is heel eenvoudig. Je **zet 
 
 De onderdelen van een vermenigvuldiging noemen we de **factoren**. Tussen de factoren noteren we een **maalteken** en de uitkomst van de vermenigvuldiging is het **product**.
 
-{{< svg "img/vermenigvuldiging.svg" "Een vermenigvuldiging bestaat uit factoren die als resultaat een product geven. We gebruiken het maalteken." >}}
+![Een vermenigvuldiging bestaat uit factoren die als resultaat een product geven. We gebruiken het maalteken.](img/vermenigvuldiging.png)
 
 Een vermenigvuldiging is eigenlijk een manier om een **optelling van dezelfde getallen korter** te schrijven.
 
@@ -313,12 +313,13 @@ Er zijn twee zaken lastig aan deze vier rekenregels:
 
 Gelukkig is er ook **één algemene rekenregel** die we met **eender welk aantal** factoren kunnen toepassen! 🎉 Die rekenregel luidt als volgt:
 
-{{< attention "Rekenregel voor het teken van een vermenigvuldiging" >}}
+<Attention title="Rekenregel voor het teken van een vermenigvuldiging">
+
 
 * Als er een **even** aantal mintekens staat in een vermenigvuldiging, is de uitkomst **positief**.
 * Als er een **oneven** aantal mintekens staat in een vermenigvuldiging, is de uitkomst **negatief**.
 
-{{< /attention >}}
+</Attention>
 
 Stel bijvoorbeeld dat we de volgende vermenigvuldiging moeten uitrekenen:
 
@@ -449,7 +450,7 @@ Het kan natuurlijk ook dat de factor na de haakjes staat:
 
 Een deling bestaat uit een **deeltal** die we moeten delen door een **deler**. Het resultaat van een deling noemen we het **quotiënt**.
 
-{{< svg "img/deling.svg" "Een deling bestaat uit een deeltal en een deler die als resultaat een quotiënt geven. We gebruiken het deelteken." >}}
+![Een deling bestaat uit een deeltal en een deler die als resultaat een quotiënt geven. We gebruiken het deelteken.](img/deling.png)
 
 Een deling als $10 : 5$ kan je lezen als: "Als ik $10$ bolletjes in $5$ gelijke groepen wil verdelen, hoeveel bolletjes zitten er dan in elk groepje?" Dat is in dit geval $2$.
 
@@ -500,7 +501,8 @@ Je kunt ook de **haakjes niet zomaar van plaats veranderen** bij een deling van 
 Je ziet dat we **niet dezelfde uitkomst** krijgen wanneer we de haakjes in de deling van plaats veranderen.
 
 ## Samengevat
-{{< attention "Basisbewerkingen" >}}
+<Attention title="Basisbewerkingen">
+
 De verzameling van de gehele getallen kent vier 
  basisbewerkingen:
 
@@ -510,17 +512,19 @@ De verzameling van de gehele getallen kent vier
 4. De **deling**: $\frac{a}{b}$ bestaat uit een **deeltal** $a$ en een **deler** $b$. Het resultaat noemt men 
    het **quotiënt**.
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "Eigenschappen van de optelling van gehele getallen" >}}
+<Attention title="Eigenschappen van de optelling van gehele getallen">
+
 
 * De optelling in $\mathbb{Z}$ is **commutatief**: $$a + b = b + a$$
 * De optelling in $\mathbb{Z}$ is **associatief**: $$(a + b) + c = a + (b + c) = a + b + c$$
 * $0$ is het **neutraal element** voor de optelling in $\mathbb{Z}$: $$a + 0 = 0 + a = a$$
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "Teken van een vermenigvuldiging" >}}
+<Attention title="Teken van een vermenigvuldiging">
+
 Bij een **vermenigvuldiging** geldt: 
 
 * **Plus maal min is min**
@@ -533,9 +537,10 @@ Of algemener:
 * Als er een **even** aantal mintekens staat in een vermenigvuldiging, is de uitkomst **positief**.
 * Als er een **oneven** aantal mintekens staat in een vermenigvuldiging, is de uitkomst **negatief**.
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "Eigenschappen van de vermenigvuldiging van gehele getallen" >}}
+<Attention title="Eigenschappen van de vermenigvuldiging van gehele getallen">
+
 
 * De vermenigvuldiging in $\mathbb{Z}$ is **commutatief**: $$a \cdot b = b \cdot a$$
 * De vermenigvuldiging in $\mathbb{Z}$ is **associatief**: $$(a \cdot b) \cdot c = a \cdot (b \cdot c) = a \cdot b \cdot c$$
@@ -545,11 +550,12 @@ Of algemener:
 * De vermenigvuldiging in $\mathbb{Z}$ is **distributief** over de optelling in $\mathbb{Z}$: $$a\cdot (b + c) = a\cdot b + a \cdot c$$
 * De vermenigvuldiging in $\mathbb{Z}$ is **distributief** over de aftrekking in $\mathbb{Z}$: $$a\cdot (b - c) = a\cdot b - a \cdot c$$
 
-{{< /attention >}}
+</Attention>
 
 
 
-{{< attention "Teken van een deling" >}}
+<Attention title="Teken van een deling">
+
 Bij een **deling** geldt: 
 
 * **Plus gedeeld door min is min**
@@ -561,4 +567,4 @@ Of algemener:
 
 * Als er een **even** aantal mintekens staat in een deling, is de uitkomst **positief**.
 * Als er een **oneven** aantal mintekens staat in een deling, is de uitkomst **negatief**.
-{{< /attention >}}
+</Attention>
