--- a/src/content/lessen/wiskunde/rekenen_rationaal/vermenigvuldigen_delen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/vermenigvuldigen_delen/index.mdx
@@ -66,7 +66,8 @@ Omgezet naar breuken (ter controle) komen we hetzelfde uit:
 $$\frac{2}{1} : \frac{1}{4} = \frac{2}{1} \cdot \frac{4}{1} = \frac{2 \cdot 4}{1 \cdot 1} = \frac{8}{1} = 8$$
 
 ## Samengevat
-{{< attention "Breuken vermenigvuldigen en delen" >}}
+<Attention title="Breuken vermenigvuldigen en delen">
+
 Om twee breuken te vermenigvuldigen, **vermenigvuldig je de tellers en noemers met elkaar**.
 In symbolen:
 
@@ -78,13 +79,14 @@ In symbolen:
 $$\frac{a}{b} : \frac{c}{d} = \frac{\frac{a}{b}}{\frac{c}{d}} = \frac{a}{b} \cdot \frac{d}{c}$$
 
 De regels voor **mintekens** zijn hetzelfde als die bij **gehele getallen**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Kommagetallen vermenigvuldigen en delen" >}}
+<Attention title="Kommagetallen vermenigvuldigen en delen">
+
 Om **kommagetallen** te **vermenigvuldigen**:
 1. **Vermenigvuldig beide getallen** alsof er geen komma staat
 2. **Maak de som** van het **aantal cijfers na de komma**
 3. **Plaats** het resultaat **evenveel cijfers na de komma als berekend uit stap 2**
 
 Om **kommagetallen** te **delen**, **vermenigvuldig** je **deeltal en deler** met een **veelvoud van 10**. Je kiest het veelvoud dat **evenveel nullen** heeft als er **cijfers zijn achter het langste kommagetal**.
-{{< /attention >}}
+</Attention>
