--- a/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
@@ -13,7 +13,7 @@ Net zoals de deling het omgekeerde is van de vermenigvuldiging, zijn **wortels**
 
 ## Wat is een vierkantswortel?
 
-{{< svg "img/terminologie.svg" "Een macht bestaat uit een grondtal en een exponent. In dit voorbeeld is 5 het grondtal en 3 de exponent." >}}
+![Een macht bestaat uit een grondtal en een exponent. In dit voorbeeld is 5 het grondtal en 3 de exponent.](img/terminologie.png)
 
 
 Een **wortelteken** schrijf je zoals een *V*, maar dan met een streepje links aan het begin en een grote streep boven de bewerking waarvan
@@ -45,10 +45,11 @@ Probeer zelf eens een waarde te vinden waarvoor geldt dat $\green{(a)}^2 = -25$.
 een getal twee keer met zichzelf vermenigvuldigt, zal je **altijd op een positief getal** uitkomen. We zeggen dat $\sqrt{-25}$ niet
 gedefinieerd is. 🛑 ✋
 
-{{< attention "Negatieve grondtallen bij vierkantswortels" >}}
+<Attention title="Negatieve grondtallen bij vierkantswortels">
+
 Een vierkantswortel met een **negatief grondtal** is **niet gedefinieerd**.
 
-{{< /attention >}}
+</Attention>
 
 ## Een vierkantswortel van breuken en kommagetallen
 De wortel van een breuk nemen gaat op een gelijkaardige manier als de macht van een breuk. Als we een **vierkantswortel nemen van een volledige breuk** willen berekenen, mogen we namelijk de **vierkantswortel** nemen van de **teller en noemer** apart.
@@ -59,15 +60,17 @@ In symbolen:
 $$\sqrt{\frac{a}{b}} = \frac{\sqrt{a}}{\sqrt{b}}$$
 
 ## Samengevat
-{{< attention "De positieve vierkantswortel" >}}
+<Attention title="De positieve vierkantswortel">
+
 Een vierkantswortel is het **omgekeerde van een kwadraat**. Algemeen geldt:
 $\sqrt{\green{a}} = \orange{b}$ als, en slechts als $ \orange{b}^2 = \green{a}$ waarbij $b \geq 0$. De vierkantswortel
 van een negatief grondtal is **niet gedefinieerd**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Vierkantswortel van een breuk of kommagetal" >}}
+<Attention title="Vierkantswortel van een breuk of kommagetal">
+
 Om de **vierkantswortel van een breuk** te berekenen, neem je de **wortel van teller en noemer**.
 
 In symbolen:
 $$\sqrt{\frac{a}{b}} = \frac{\sqrt{a}}{\sqrt{b}}$$
-{{< /attention >}}
+</Attention>
