--- a/src/content/lessen/fysica/beweging/soorten_bewegingen/index.mdx
+++ b/src/content/lessen/fysica/beweging/soorten_bewegingen/index.mdx
@@ -14,12 +14,13 @@ Eerst en vooral maken we een onderscheid tussen een **verandering in plaats** en
 
 Denk hierbij aan een bijl. We kunnen een bijl verplaatsen (**translatie**), draaien (**rotatie**) of werpen zoals een coole viking (**combinatie**). 🪓
 
-{{< svg "img/translatie_rotatie.svg" "Wanneer een viking een bijl werpt, is er zowel translatie als rotatie." >}}
+![Wanneer een viking een bijl werpt, is er zowel translatie als rotatie.](img/translatie_rotatie.png)
 
 ## Rechtlijnige, cirkelvormige en willekeurige beweging
 We kunnen een **translatie** nog verder onderverdelen in **rechtlijnige en cirkelvormige** bewegingen. Een **combinatie** van beide noemt men een **willekeurige** beweging. Hiervoor kijken we naar de **baan** van een beweging. Als de baan een **rechte lijn** vormt, is het een **rechtlijnige beweging**. Een **cirkelvormige beweging** heb je wanneer de baan **cirkelvormig** is, zoals bij een reuzenrad. 🎡
 
 ## Samengevat
-{{< attention "Soorten bewegingen" >}}
+<Attention title="Soorten bewegingen">
+
 Bij een **verandering van stand** spreekt men van een **rotatie**. Wanneer de **plaats verandert**, spreekt men van een **translatie**. Dit kunnen we nog verder onderverdelen in een **rechtlijnige**, **cirkelvormige** of **willekeurige** (combinatie) beweging. We kijken hiervoor naar **de baan** van het voorwerp.
-{{< /attention >}}
+</Attention>
