--- a/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
@@ -12,26 +12,26 @@ Vooraleer we de wondere wereld van de meetkunde {{< mute "of geometrie" >}} kunn
 ## Een punt in het vlak
 Een **punt** is het kleinste *deeltje* in de meetkunde. We stellen dit voor met **een stip** en benoemen het (wanneer we dat willen) **met een hoofdletter**.
 
-{{< svg "img/punt.svg" "Het punt P">}}
+![Het punt P](img/punt.png)
 
 Een **vlak** (vaak aangeduid als 'het vlak $\pi$' of met een andere Griekse letter), waar de **vlakke of tweedimensionale meetkunde** zich afspeelt, is een verzameling van een oneindig aantal punten. Het zet zich **{{< class "oneindig" "blue" >}}** voort in **2 richtingen: lengte en breedte**. Je kan het vergelijken met een blaadje papier. Alles wat op het papier staat, ligt in een vlak. Een **ruimte** daarentegen, die zet zich in **3 richtingen** voort, namelijk **lengte, breedte en hoogte**. Dat is hoe wij naar de wereld kijken. Alles rondom ons kunnen we beschrijven met een lengte, breedte en hoogte of in **drie dimensies**.
 
-{{< svg "img/vlak.svg" "Het vlak pi bestaat uit een oneindig aantal punten" >}}
+![Het vlak pi bestaat uit een oneindig aantal punten](img/vlak.png)
 
 In het vlak kunnen we met behulp van punten een heleboel vormen en vlakke figuren tekenen en beschrijven. We kunnen het vlak zien als een spelbord waarop de punten onze pionnen zijn. 🎲
 
 ## Definiëren twee punten een rechte?
 Naast een punt en een vlak werken we in de meetkunde ook met **rechten**. Een **rechte of lijn** is een verzameling van punten, **oneindig in 1 richting**. Het is met andere woorden een **rechte lijn** die oneindig doorloopt langs beide kanten. We noteren dit bijna altijd met een **kleine letter**. Aangezien we een (rechte) lijn niet oneindig lang kunnen tekenen, spreken we af om een rechte **nooit in een punt te laten eindigen**. We trekken de lijn dus altijd nog een beetje door voordat we stoppen. 📏 Zo is het duidelijk dat het om een rechte gaat en geen lijnstuk (zie verder).
 
-{{< svg "img/rechte.svg" "De rechte a" >}}
+![De rechte a](img/rechte.png)
 
 **Door één punt** A gaan **oneindig veel rechten**. Maar **door twee punten** A en B gaat slechts **één rechte**. Probeer zelf maar eens om een tweede rechte (die niet samenvalt met de andere) te tekenen door twee punten! Je zal zelf zien dat dit niet gaat. ✋ 
 
-{{< svg "img/twee_punten_rechten.svg" "Door één punt gaat een oneindig aantal rechten, maar door twee punten gaat slechts één rechte." >}}
+![Door één punt gaat een oneindig aantal rechten, maar door twee punten gaat slechts één rechte.](img/twee_punten_rechten.png)
 
 **Punten** die **op dezelfde rechte** liggen (dit kunnen meer dan twee punten zijn), noemen we **collineaire punten**.
 
-{{< svg "img/collineaire_punten.svg" "Punten zijn collineair als ze op dezelfde rechte liggen. Let op: een rechte mag je altijd doortrekken, dus punten die in het verlengde van de rechte liggen tellen ook mee." >}}
+![Punten zijn collineair als ze op dezelfde rechte liggen. Let op: een rechte mag je altijd doortrekken, dus punten die in het verlengde van de rechte liggen tellen ook mee.](img/collineaire_punten.png)
 
 De punten **A, B, C, D** zijn **collineair**. De punten **A, D en E** zijn bijvoorbeeld **niet collineair**. Merk ook op dat **elke groep van twee punten steeds collineair** is, aangezien twee punten steeds één rechte definiëren.
 
@@ -45,17 +45,17 @@ Vaak denken mensen bij het woord **richting** aan links of rechts. In de wiskund
 ## Wat is het verschil tussen een rechte en een lijnstuk?
 Een **lijnstuk** is, zoals doet vermoeden, een stuk van een lijn. 🤯 Meer bepaald: een lijn die **begrensd is door twee punten**. We **benoemen** het lijnstuk steeds naar zijn **grenspunten**. Dat zijn de **punten die het lijnstuk begrenzen**. Weet jij nu welke van volgende twee een lijnstuk is en welke een rechte {{< mute "of lijn" >}}? 🤔
 
-{{< svg "img/lijnstuk_rechte.svg" "Een lijnstuk is een lijn die stopt in punten. We noteren dit met twee rechte haakjes, eentje rond elk grenspunt: [AB]. Een rechte loopt doorheen de punten, zoals eerder reeds vermeld. We noteren geen vierkante haakjes, maar gewoon AB." >}}
+![Een lijnstuk is een lijn die stopt in punten. We noteren dit met twee rechte haakjes, eentje rond elk grenspunt: [AB]. Een rechte loopt doorheen de punten, zoals eerder reeds vermeld. We noteren geen vierkante haakjes, maar gewoon AB.](img/lijnstuk_rechte.png)
 
 Naast rechten en lijnstukken, bestaan er ook nog **halfrechten**. Dit zijn rechten die **aan één kant begrensd** zijn en één **grenspunt** hebben. Zij lopen dus maar **langs één kant oneindig** door.
 
-{{< svg "img/halfrechte.svg" "Een halfrechte is slechts begrensd langs een zijde. Dat betekent dat de andere zijde oneindig doorloopt, door alle andere punten. We noteren: [AB, met één vierkante haakje." >}}
+![Een halfrechte is slechts begrensd langs een zijde. Dat betekent dat de andere zijde oneindig doorloopt, door alle andere punten. We noteren: [AB, met één vierkante haakje.](img/halfrechte.png)
 
 Tenslotte spreken we ook nog van een **drager**. Dit is de **rechte waarop het lijnstuk of de halfrechte ligt**. Zo ligt een lijnstuk [AB] steeds op de rechte AB. We noemen **AB** hier de **drager van [AB]**.
 
 ### Overzicht notatie's
 
-{{< svg "img/overzicht_notatie.svg" "Een overzicht van alle geziene notaties." >}}
+![Een overzicht van alle geziene notaties.](img/overzicht_notatie.png)
 
 ## Hoe noteer ik de lengte van een lijnstuk?
 Elk lijnstuk kunnen we **meten met een liniaal**. 📏 We meten dan eigenlijk **de afstand tussen de twee grenspunten**. In volgende lessen ga je nog zien hoe je de lengte van een lijnstuk {{< mute "oftewel de afstand tussen de twee grenspunten" >}} kan bereken uit andere gegevens, maar hoe moet je de bekomen lengte dan noteren?
@@ -76,16 +76,17 @@ Je zal zien dat er soms toch **geen eenheid** staat. Deze wordt vaak weggelaten 
 
 Wanneer twee (of meer) **lijnstukken dezelfde lengte** hebben, duiden we dit aan met **dezelfde merktekens**.
 
-{{< svg "img/merktekens.svg" "Merktekens brengen we in het midden van een lijnstuk aan. Meestal zijn dit Roomeinse cijfers." >}}
+![Merktekens brengen we in het midden van een lijnstuk aan. Meestal zijn dit Roomeinse cijfers.](img/merktekens.png)
 
 ## Wat is het midden van een lijnstuk?
 Meetkunde bevat jammer genoeg - voor sommigen - relatief veel **definities**. Maar je moet je altijd bedenken dat meetkunde een spel is, waarvan je de spelregels nu eenmaal **goed moet kennen**. Een groot voordeel bij meetkunde is dat je het meestal eens kan tekenen om te zien of je definitie klopt.
 
-{{< attention "Midden van een lijnstuk" >}} 
+<Attention title="Midden van een lijnstuk">
+ 
 M is het midden van een lijnstuk [AB] als en slechts als M op het lijnstuk [AB] ligt en het lijnstuk verdeeld is in twee even lange stukken.
 
 $$M = mi[AB] \Leftrightarrow |AM| = |BM| \text{ en } M \in [AB] $$
-{{< /attention >}}
+</Attention>
 
 Wat wil dit nu precies zeggen? 🧐 Stap per stap gaan we erdoorheen! **M** is een hoofdletter en verwijst hier dus naar **een punt M**. Dan komen we mi[AB] tegen. Dat betekent **het midden van** het lijnstuk **[AB]**.
 
@@ -93,25 +94,28 @@ Een dubbele wederzijdse pijl ($\Leftrightarrow$) betekent **als en slechts als**
 
 In welke van de drie onderstaande situaties is M het midden van het lijnstuk [AB]? {{< mute "Druk op 'toon uitleg' voor de uitkomst." >}}
 
-{{< svg "img/definitie_midden.svg" "Aan beide voorwaarden moet voldaan worden. De lengte tussen punt M en punten A en B moet gelijk zijn en M moet op het lijnstuk liggen (dezelfde drager)." >}}
+![Aan beide voorwaarden moet voldaan worden. De lengte tussen punt M en punten A en B moet gelijk zijn en M moet op het lijnstuk liggen (dezelfde drager).](img/definitie_midden.png)
 
 Zie je, zo moeilijk zijn die definities niet! 💪💃🎉
 
 ## Samengevat
-{{< attention "Punten, rechten, vlakken" >}}
+<Attention title="Punten, rechten, vlakken">
+
 Een **punt** stellen we voor met een **stip** en benoemen we met een **hoofdletter**. Het is het kleinste *deeltje* in de meetkunde. Een **rechte of lijn** is een verzameling van een **oneindig aantal punten in één richting**. We benoemen dit met een **kleine letter** of door **twee punten** op de rechte (zoals: AB). Door **twee punten** gaat slechts **één rechte** en door **één punt** gaan **oneindig veel rechten**. Punten op dezelfde rechte noemen we **collineaire punten**.
 
 Het **vlak** is een **oneindige verzameling punten in twee richtingen**. Een blaadje papier is een vlak en alles wat erop staat, staat afgebeeld in **twee dimensies** of **in het vlak**. Een **ruimte** is een **oneindige verzameling punten in drie richtingen**. We noemen dat **drie dimensionaal** en dat is de wereld waarin we leven.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Een lijnstuk (meten)" >}}
+<Attention title="Een lijnstuk (meten)">
+
 Een **lijnstuk [AB]** is een **lijn begrensd door twee punten**, de **grenspunten**. Een **halfrechte [AB** is slechts **aan één kant** begrensd door een **grenspunt**. De rechte die waarop het lijnstuk of de halfrechte ligt, noemen we de **drager**.
 
 Om betekenis te geven aan de **lengte van een lijnstuk |AB|**, gebruiken we **eenheden** zoals de **meter**. Lijnstukken met **dezelfde lengte** krijgen **merktekens**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Het midden van een lijnstuk" >}}
+<Attention title="Het midden van een lijnstuk">
+
 M is het midden van een lijnstuk [AB] als en slechts als M op het lijnstuk [AB] ligt en het lijnstuk verdeelt is in twee even lange stukken.
 
 $$M = mi[AB] \Leftrightarrow |AM| = |BM| \text{ en } M \in [AB] $$
-{{< /attention >}}
+</Attention>
