--- a/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
@@ -12,7 +12,7 @@ images: []
 ## Wat is een driehoek?
 **Elke veelhoek met drie hoeken en drie zijden** is een driehoek. Logisch, toch? 🕶️
 
-{{< svg "img/driehoek.svg" "Een driehoek heeft steeds drie hoeken." >}}
+![Een driehoek heeft steeds drie hoeken.](img/driehoek.png)
 
 We spreken van de driehoek ABC en we **noteren** $\triangle{ABC}$. 
 
@@ -25,9 +25,10 @@ Eén van de bekendste en meest gebruikte eigenschappen in de (vlakke) meetkunde 
 
 Je kan dit **zelf testen** door een willekeurige driehoek te tekenen en vervolgens de hoeken af te knippen. ✂️ Wanneer je de hoeken vervolgens naast elkaar legt, zie je dat ze een **gestrekte hoek** {{< mute "of 180°" >}} vormen.
 
-{{< attention "Som van de hoeken van een driehoek" >}}
+<Attention title="Som van de hoeken van een driehoek">
+
 De **som van de hoeken van een driehoek** is steeds **180°**.
-{{< /attention >}}
+</Attention>
 
 {{< expand "Driehoeken en de vorm van ons universum" >}}
 Dat de som van de hoeken van een driehoek 180° vormt is een handig gegeven. We moeten echter wel een kanttekening maken en erbij zeggen dat deze eigenschap enkel en alleen geldt in de vlakke meetkunde. In meetkundige systemen met gebogen oppervlakken, zoals de bolmeetkunde, geldt deze eigenschap niet. Aan de hand van deze inzichten is het gelukt om de vorm van ons universum te bepalen. 🌌
@@ -38,31 +39,35 @@ Astronomen hebben een denkbeeldige driehoek geconstrueerd met drie extreem veraf
 ## Merkwaardige lijnen
 Een driehoek heeft verschillende **merkwaardige lijnen**. Dit zijn lijnen met een of meerdere speciale eigenschappen. Twee van zulke merkwaardige lijnen, de [middelloodlijn](../rechten) en [bissectrice](../hoeken), hebben we reeds behandeld in vorige lessen. **In het geval van een driehoek** wordt deze eigenschap dan **toegepast** op een zijde of hoek van de **driehoek**. 
 
-{{< attention "Middelloodlijn van een driehoek" >}}
-Een **middelloodlijn van een driehoek** is de rechte die **door het midden** gaat van een zijde en **loodrecht** staat op de drager van die zijde.
-{{< /attention >}}
+<Attention title="Middelloodlijn van een driehoek">
 
-{{< attention "Bissectrice van een driehoek" >}}
+Een **middelloodlijn van een driehoek** is de rechte die **door het midden** gaat van een zijde en **loodrecht** staat op de drager van die zijde.
+</Attention>
+
+<Attention title="Bissectrice van een driehoek">
+
 Een **bissectrice van een driehoek** is de rechte die door een **hoekpunt** gaat en de bijhorende hoek in **twee even grote hoeken** verdeelt.
-{{< /attention >}}
+</Attention>
 
 De **hoogtelijn** van een driehoek werkt **analoog** aan de methode voor het bepalen van [de afstand tussen een punt en een rechte](../rechten) 😁. Het enige verschil hierbij is dat het hier om een **rechte** gaat en niet om een lijnstuk (waarvan we de lengte kunnen meten).
 
-{{< svg "img/hoogtelijn.svg" "Twee verschillende driehoeken met een getekende hoogtelijn." >}}
+![Twee verschillende driehoeken met een getekende hoogtelijn.](img/hoogtelijn.png)
 
 Zoals je kan zien is het mogelijk dat de **hoogtelijn** van een driehoek **buiten de driehoek** ligt. De definitie spreekt immers over **de drager van de zijde**. Deze ligt dus ook buiten de eigenlijk zijde.
 
-{{< attention "Hoogtelijn van een driehoek" >}}
+<Attention title="Hoogtelijn van een driehoek">
+
 Een **hoogtelijn** van een driehoek is de **loodlijn** uit een hoekpunt **op de drager** van de overstaande zijde.
-{{< /attention >}}
+</Attention>
 
 Tenslotte is er ook nog de **zwaartelijn**. Moest je een driehoek op zo'n zwaartelijn balanceren, dan blijft hij mooi in **evenwicht**. Hij gaat door een **hoekpunt** en het **midden van de overstaande zijde**.
 
-{{< svg "img/zwaartelijn.svg" "Een voorbeeld van een zwaatelijn." >}}
+![Een voorbeeld van een zwaatelijn.](img/zwaartelijn.png)
 
-{{< attention "Zwaartelijn van een driehoek" >}}
+<Attention title="Zwaartelijn van een driehoek">
+
 Een **zwaartelijn** van een driehoek is de **rechte** door een hoekpunt en **door het midden** van de overstaande zijde.
-{{< /attention >}}
+</Attention>
 
 Van elke merkwaardige lijn zijn er **drie in elke driehoek**. Deze drie hebben ook allemaal een **gemeenschappelijk snijpunt**. In het geval van de zwaartelijnen, noemen we dit het **zwaartepunt**. 🏋️
 
@@ -74,22 +79,26 @@ We spreken van een **scherphoekige driehoek** wanneer hij **drie scherpe hoeken*
 Een **ongelijkzijdige** (of **ongelijkbenige**) **driehoek** is een driehoek met **drie verschillende, {{< mute "dus niet even lange," >}} zijden**. Een **gelijkbenige driehoek** is dan weer een driehoek met **twee gelijke zijden**, net zoals wij twee (ongeveer) gelijke benen hebben 🦵. De derde mogelijkheid is een **gelijkzijdige driehoek** met **drie gelijke zijden**.
 
 ## Samengevat
-{{< attention "De driehoek" >}}
+<Attention title="De driehoek">
+
 Een driehoek $\triangle{ABC}$ is een **vlakke figuur** met **drie hoeken en drie zijden**. We definiëren een **overstaande hoek**, **ingesloten hoek** en **aanliggende hoeken**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Som van de hoeken van een driehoek" >}}
+<Attention title="Som van de hoeken van een driehoek">
+
 De **som van de hoeken van een driehoek** is steeds **180°**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Merkwaardige lijnen" >}}
+<Attention title="Merkwaardige lijnen">
+
 In een driehoek zijn **vier merkwaardige lijnen**:
 * Een **middelloodlijn van een driehoek** is de rechte die **door het midden** gaat van een zijde en **loodrecht** staat op de drager van die zijde.
 * Een **bissectrice van een driehoek** is de rechte die door een **hoekpunt** gaat en de bijhorende hoek in **twee even grote hoeken** verdeelt.
 * Een **hoogtelijn** van een driehoek is de **loodlijn** uit een hoekpunt **op de drager** van de overstaande zijde.
 * Een **zwaartelijn** van een driehoek is de **rechte** door een hoekpunt en **door het midden** van de overstaande zijde.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Driehoeken classificeren" >}}
+<Attention title="Driehoeken classificeren">
+
 We kunnen driehoeken classificeren volgens **hoeken** of **zijden**.
-{{< /attention >}}
+</Attention>
