--- a/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
@@ -12,39 +12,40 @@ Wanneer twee lijnen elkaar snijden, dan doen ze dit onder een bepaalde **hoek**.
 ## Wat is een hoek?
 **Hoeken** kom je overal tegen. Denk maar aan de letterlijke hoeken van een kamer of de hellingshoek {{< mute "ook gekend als de hellingsgraad" >}} van een skipiste. ⛷️🏂
 
-{{< svg "img/ski_slope.svg" "Twee skiërs gaan een piste af. Hoe hoger de hellingshoek, hoe steiler de helling." >}}
+![Twee skiërs gaan een piste af. Hoe hoger de hellingshoek, hoe steiler de helling.](img/ski_slope.png)
 
 Een **hoek** wordt steeds **bepaald door twee halfrechten met een gemeenschappelijk grenspunt**. De halfrechten noemen we de **benen** van de hoek en het grenspunt noemen we **het hoekpunt**. Een hoek heeft steeds **twee benen** en **één hoekpunt**.
 
-{{< svg "img/terminologie.svg" "Een hoek bestaat uit een hoekpunt en twee benen." >}}
+![Een hoek bestaat uit een hoekpunt en twee benen.](img/terminologie.png)
 
 We kunnen een hoek op drie manieren **benoemen**. Enerzijds kunnen we dit doen met een **Griekse letter**, zoals $\alpha$ (alfa) of $\theta$ (thèta). Anderzijds kunnen we dit doen met een ***gewone* letter** (de letter van het grenspunt) waar een **hoedje** 🎩 op staat, bijvoorbeeld $\hat{A}$ of $\hat{B}$. Een derde manier gebruiken we als er **verwarring** mogelijk zou zijn met één letter. 😕 We schrijven dan **drie letters** op. Twee letters (de buitenste) zijn afkomstig van **een punt op elk been**. De middelste letter is **de hoek zelf** en krijgt een hoedje. Zo krijg je bijvoorbeeld $B\hat{A}C$. 😀
 
-{{< svg "img/notatie.svg" "Er zijn drie verschillende manieren om een hoek te benoemen. Hier staan ze alle drie aangeduid." >}}
+![Er zijn drie verschillende manieren om een hoek te benoemen. Hier staan ze alle drie aangeduid.](img/notatie.png)
 
 ## Bijzondere hoeken
 Er zijn enkele **bijzondere hoeken** waarvan je de naam best onthoudt, omdat je ze nog veel zal tegenkomen. 🧠
 
 Om te beginnen kan je elke hoek opdelen in één van drie categorieën naargelang **de grootte** ervan. Deze indeling, van **scherpe, stompe en rechte hoeken**, zal je waarschijnlijk wel al kennen!
 
-{{< svg "img/soorten_hoeken_grootte.svg" "Scherpe hoeken zijn kleiner dan 90°, rechte hoeken zijn precies 90° en stompe hoeken zijn groter dan 90°." >}}
+![Scherpe hoeken zijn kleiner dan 90°, rechte hoeken zijn precies 90° en stompe hoeken zijn groter dan 90°.](img/soorten_hoeken_grootte.png)
 
 Daarnaast zijn er nog drie {{< mute "nieuwe" >}} termen: een **nulhoek**, **gestrekte hoek**, en **volle hoek**. 
 
-{{< svg "img/soorten_hoeken_speciaal.svg" "Een nulhoek is een hoek van 0°, een gestrekte hoek is een hoek van 180° en een volle hoek eentje van 360°." >}}
+![Een nulhoek is een hoek van 0°, een gestrekte hoek is een hoek van 180° en een volle hoek eentje van 360°.](img/soorten_hoeken_speciaal.png)
 
 Echt moeilijk te onthouden zijn ze niet, toch?! 🧐😉
 
 ## Wat is de bissectrice van een hoek?
 In [de les over rechten](../rechten) hebben we de definitie van het midden van een lijnstuk gezien. Ook **hoeken** kunnen we **verdelen in twee gelijke hoeken**. De lijn die de hoek verdeelt noemt men de **deellijn of bissectrice**. 
 
-{{< svg "img/bissectrice.svg" "De bissectrice (of deellijn) van een hoek is de rechte die de hoek in twee even grote hoeken verdeelt." >}}
+![De bissectrice (of deellijn) van een hoek is de rechte die de hoek in twee even grote hoeken verdeelt.](img/bissectrice.png)
 
 Elke **hoek** heeft **juist één bissectrice**, net zoals elk lijnstuk juist één midden heeft. 👍
 
-{{< attention "Bissectrice van een hoek" >}}
+<Attention title="Bissectrice van een hoek">
+
 De **bissectrice** (of **deellijn**) van een hoek is de rechte die de hoek in twee even grote hoeken verdeelt.
-{{< /attention >}}
+</Attention>
 
 {{< expand "Een hoek verdelen in drie gelijke delen zonder geodriehoek" >}}
 Later in je schoolse loopbaan, zal je nog leren hoe je het midden van een lijnstuk, een loodlijn, een bissectrice... met **slechts passer en meetlat** kan construeren (dus zonder geodriehoek). Hier hielden de **oude Grieken** zich ook al mee bezig, maar ze zijn er nooit in geslaagd om een **hoek in drie gelijke hoeken te verdelen**. Dit is één van de **drie problemen uit de klassieke Griekse meetkunde**. 
@@ -55,23 +56,26 @@ Vooraleer je begint met dit toch te proberen, wil ik je waarschuwen: in 1836 hee
 ## Het verband tussen hoeken en draaiingen 🥴
 Wanneer je een lijnstuk opneemt en **draait** {{< mute "(je zorgt er dus voor dat één punt, de as, op dezelfde plaats blijft liggen)">}}, dan **maak je** eigenlijk een **bepaalde hoek**. Meer nog, je draait iets steeds **onder een bepaalde hoek**.
 
-{{< svg "img/draaiing.svg" "Een draaiing onder een hoek van 30°." >}}
+![Een draaiing onder een hoek van 30°.](img/draaiing.png)
 
 Later, bij de lessen over goniometrie, zal je zien dat een hoek ook anders beschreven kan worden. Namelijk als een afstand die je wandelt over de buitenkant van een cirkel. Dan spreken we niet meer over graden, maar over **radialen**. Maar voor nu zijn graden meer dan genoeg! 😉
 
 ## Samengevat
-{{< attention "Hoeken" >}}
+<Attention title="Hoeken">
+
 Een **hoek** wordt steeds **bepaald door twee halfrechten met een gemeenschappelijk grenspunt**. De halfrechten noemen we de **benen** van de hoek en het grenspunt noemen we **het hoekpunt**. Een hoek heeft steeds **twee benen** en **één hoekpunt**.
 
 **Scherpe hoeken** zijn kleiner dan 90°, **rechte hoeken** zijn precies 90° en **stompe hoeken** zijn groter dan 90°, maar kleiner dan 180°.
 
 Een **nulhoek** is een hoek van 0°, een **gestrekte hoek** is een hoek van 180° en een **volle hoek** eentje van 360°.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Bissectrice van een hoek" >}}
+<Attention title="Bissectrice van een hoek">
+
 De **bissectrice** (of **deellijn**) van een hoek is de rechte die de hoek in twee even grote hoeken verdeelt.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Hoeken en draaiingen" >}}
+<Attention title="Hoeken en draaiingen">
+
 Een **draaiing** van een object gebeurt steeds **om een bepaalde hoek**.
-{{< /attention >}}
+</Attention>
