--- a/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
@@ -19,7 +19,7 @@ $$\frac{1 + 1}{8 + 6} = \frac{\frac{2}{\orange{2}}}{\frac{14}{\orange{2}}} = \fr
 
 Dit kàn **niet juist** zijn! Het stuk van $\frac{1}{6}$ is immers op z'n eentje al groter dan $\frac{1}{7}$. {{< mute "Een stuk van een taart dat gedeeld is in meer gelijke stukken is kleiner dan een stuk van een (even grote) taart die in minder stukken is verdeeld." >}} 
 
-{{< svg "img/teller_noemer_optellen.svg" "Een visuele weergave van de verschillende breuken." >}}
+![Een visuele weergave van de verschillende breuken.](img/teller_noemer_optellen.png)
 
 De methode met het optellen van teller en noemer is dus **foutief**!
 
@@ -40,7 +40,7 @@ Aangezien het soms moeilijk is om het kleinst gemeenschappelijk veelvoud te vind
 3. Je vermenigvuldigt de teller van de eerste breuk met de noemer van de tweede breuk, het resultaat is de **nieuwe teller van de eerste breuk**
 4. Je vermenigvuldigt de teller van de tweede breuk met de noemer van de eerste breuk, het resultaat is de **nieuwe teller van de tweede breuk**
 
-{{< svg "img/gelijknamig.svg" "Een breuk gelijknamig maken." >}}
+![Een breuk gelijknamig maken.](img/gelijknamig.png)
 
 ### Nieuwe noemers voor beide breuken
 Bij de eerste stap **vermenivuldig je de noemers van beide breuken**. Het resultaat dat je bekomt wordt de nieuwe noemer voor beide breuken. Vaak komt dit overeen met het kleinst gemeenschappelijk veelvoud en anders is het niet veel extra werk. Bijvoorbeeld:
@@ -72,7 +72,7 @@ Hoera! 👍
 ### Extra voorbeeld
 Kan jij mij vertellen welke stappen ik heb genomen om onderstaande optelling gelijknamig te maken?
 
-{{< svg "img/extra_voorbeeld.svg" "Het gelijknamig maken van twee breuken met optionele uitleg." >}}
+![Het gelijknamig maken van twee breuken met optionele uitleg.](img/extra_voorbeeld.png)
 
 ## Gelijknamige breuken optellen en aftrekken
 Het moeilijkste deel is achter de rug! 😌🎉 Nadat we twee gelijknamige breuken hebben, moeten we alleen nog de **tellers optellen of aftrekken** volgens de [regels die we reeds kennen](../rekenen_gehele_getallen). We kunnen nu dus eindelijk berekenen hoeveel pizza we in totaal hebben gegeten.
@@ -95,21 +95,24 @@ $$1.589 - 3.4 = 1.589 - 3.4\green{00} = -1.811$$
  
 
 ## Samengevat
-{{< attention "Breuken optellen en aftrekken" >}}
+<Attention title="Breuken optellen en aftrekken">
+
 Om breuken op te tellen of af te trekken moet je de **breuken eerst gelijknamig** maken en vervolgens de **tellers optellen of aftrekken**.
 
 In symbolen:
 $$\frac{a}{\orange{b}} \pm \frac{c}{\orange{b}} = \frac{a \pm c}{\orange{b}}$$
-{{< /attention >}}
-{{< attention "Breuken gelijknamig maken" >}}
+</Attention>
+<Attention title="Breuken gelijknamig maken">
+
 Om breuken gelijknamig te maken, kan je volgend **stappenplan** gebruiken:
 1. Je **vereenvoudigt**, indien mogelijk, de breuken
 2. Je vermenigvuldigt de noemers met elkaar en het resultaat geeft de **nieuwe noemers voor beide breuken**
 3. Je vermenigvuldigt de teller van de eerste breuk met de noemer van de tweede breuk, het resultaat is de **nieuwe teller van de eerste breuk**
 4. Je vermenigvuldigt de teller van de tweede breuk met de noemer van de eerste breuk, het resultaat is de **nieuwe teller van de tweede breuk**
-{{< /attention >}}
-{{< attention "Kommagetallen optellen en aftrekken" >}}
+</Attention>
+<Attention title="Kommagetallen optellen en aftrekken">
+
 Je kan **de kommagetallen omzetten naar breuken** of een **gedachte-trucje** gebruiken. 
 
 Je **vult** hiervoor de **kommagetallen aan met nullen** totdat ze beide evenveel getallen achter de komma hebben. Vervolgens **denk je de komma even weg** om de bewerking uit te voeren en plaats je hem daarna terug. Je **plaatst de komma zodanig dat er evenveel cijfers na de komma zijn** als er waren voor je de bewerking uitvoerde.
-{{< /attention >}}
+</Attention>
